// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 0.75" bend-45 1`] = `
{
  "dim": {
    "aabbVolume": 2.073492,
    "indexCount": 8736,
    "spanX": 5.332573,
    "spanY": 0.072917,
    "spanZ": 5.332573,
    "vertexCount": 1569,
  },
  "hash": "38100bd60b31661e",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 0.75" bend-90 1`] = `
{
  "dim": {
    "aabbVolume": 2.073492,
    "indexCount": 8736,
    "spanX": 5.332573,
    "spanY": 5.332573,
    "spanZ": 0.072917,
    "vertexCount": 1569,
  },
  "hash": "1af8ab08ee51e43e",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 0.75" multi-bend 1`] = `
{
  "dim": {
    "aabbVolume": 4.130743,
    "indexCount": 11616,
    "spanX": 10.000011,
    "spanY": 0.072917,
    "spanZ": 5.664987,
    "vertexCount": 2073,
  },
  "hash": "abd86aeae686ec1c",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 0.75" short-straight 1`] = `
{
  "dim": {
    "aabbVolume": 0.000268,
    "indexCount": 5856,
    "spanX": 0.050314,
    "spanY": 0.072917,
    "spanZ": 0.072917,
    "vertexCount": 1065,
  },
  "hash": "469ca77cb28c6154",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 0.75" straight 1`] = `
{
  "dim": {
    "aabbVolume": 0.053503,
    "indexCount": 5856,
    "spanX": 10.062889,
    "spanY": 0.072917,
    "spanZ": 0.072917,
    "vertexCount": 1065,
  },
  "hash": "4f28535def97094a",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 2" bend-45 1`] = `
{
  "dim": {
    "aabbVolume": 5.134444,
    "indexCount": 8736,
    "spanX": 5.38466,
    "spanY": 0.177083,
    "spanZ": 5.38466,
    "vertexCount": 1569,
  },
  "hash": "0f6a5d4135c6241a",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 2" bend-90 1`] = `
{
  "dim": {
    "aabbVolume": 5.134444,
    "indexCount": 8736,
    "spanX": 5.38466,
    "spanY": 5.38466,
    "spanZ": 0.177083,
    "vertexCount": 1569,
  },
  "hash": "19e3a4fa70b6c67c",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 2" multi-bend 1`] = `
{
  "dim": {
    "aabbVolume": 10.216211,
    "indexCount": 11616,
    "spanX": 10.000027,
    "spanY": 0.177083,
    "spanZ": 5.76915,
    "vertexCount": 2073,
  },
  "hash": "8a415875e2aace0e",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 2" short-straight 1`] = `
{
  "dim": {
    "aabbVolume": 0.001578,
    "indexCount": 5856,
    "spanX": 0.050314,
    "spanY": 0.177083,
    "spanZ": 0.177083,
    "vertexCount": 1065,
  },
  "hash": "c47ecd198efa5579",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 2" straight 1`] = `
{
  "dim": {
    "aabbVolume": 0.315556,
    "indexCount": 5856,
    "spanX": 10.062889,
    "spanY": 0.177083,
    "spanZ": 0.177083,
    "vertexCount": 1065,
  },
  "hash": "1c993a1d3f25c3c9",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 4" bend-45 1`] = `
{
  "dim": {
    "aabbVolume": 9.947352,
    "indexCount": 8736,
    "spanX": 5.462791,
    "spanY": 0.333333,
    "spanZ": 5.462791,
    "vertexCount": 1569,
  },
  "hash": "51f992f5646a174e",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 4" bend-90 1`] = `
{
  "dim": {
    "aabbVolume": 9.947352,
    "indexCount": 8736,
    "spanX": 5.462791,
    "spanY": 5.462791,
    "spanZ": 0.333333,
    "vertexCount": 1569,
  },
  "hash": "3c00f00048b85164",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 4" multi-bend 1`] = `
{
  "dim": {
    "aabbVolume": 19.751396,
    "indexCount": 11616,
    "spanX": 10.00005,
    "spanY": 0.333333,
    "spanZ": 5.925395,
    "vertexCount": 2073,
  },
  "hash": "95ba150fccc0db8d",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 4" short-straight 1`] = `
{
  "dim": {
    "aabbVolume": 0.00559,
    "indexCount": 5856,
    "spanX": 0.050314,
    "spanY": 0.333333,
    "spanZ": 0.333333,
    "vertexCount": 1065,
  },
  "hash": "d5a51f1127edd54a",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — flexible (PEX) snapshots > pex 4" straight 1`] = `
{
  "dim": {
    "aabbVolume": 1.118097,
    "indexCount": 5856,
    "spanX": 10.062889,
    "spanY": 0.333333,
    "spanZ": 0.333333,
    "vertexCount": 1065,
  },
  "hash": "955d590b245014f0",
  "isRigid": false,
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 0.75" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 2.225949,
    "indexCount": 240,
    "spanX": 5.04375,
    "spanY": 0.0875,
    "spanZ": 5.04375,
    "vertexCount": 88,
  },
  "hash": "d6f388aa4657edaa",
  "isRigid": true,
  "wallHash": "188957a0e75aa8fd",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 0.75" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 2.225949,
    "indexCount": 240,
    "spanX": 5.04375,
    "spanY": 5.04375,
    "spanZ": 0.0875,
    "vertexCount": 88,
  },
  "hash": "2314d3f9b6290110",
  "isRigid": true,
  "wallHash": "56734db2d65a1c57",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 0.75" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 4.451563,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.0875,
    "spanZ": 5.0875,
    "vertexCount": 114,
  },
  "hash": "a83a8ba124638b28",
  "isRigid": true,
  "wallHash": "c9a0d9b4534d1e9b",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 0.75" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.000383,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.0875,
    "spanZ": 0.0875,
    "vertexCount": 62,
  },
  "hash": "3967c3c00fe3afeb",
  "isRigid": true,
  "wallHash": "a13f6f6247971364",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 0.75" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.076562,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.0875,
    "spanZ": 0.0875,
    "vertexCount": 62,
  },
  "hash": "1be710dec9c6a6db",
  "isRigid": true,
  "wallHash": "fd745bb30277d498",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 2" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 5.145718,
    "indexCount": 240,
    "spanX": 5.098958,
    "spanY": 0.197917,
    "spanZ": 5.098958,
    "vertexCount": 88,
  },
  "hash": "257ce31f99d228ad",
  "isRigid": true,
  "wallHash": "0b405a4f3f5f6d8f",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 2" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 5.145718,
    "indexCount": 240,
    "spanX": 5.098958,
    "spanY": 5.098958,
    "spanZ": 0.197917,
    "vertexCount": 88,
  },
  "hash": "114ffa95eaa60da9",
  "isRigid": true,
  "wallHash": "005eebe3a4722e03",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 2" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.287561,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.197917,
    "spanZ": 5.197917,
    "vertexCount": 114,
  },
  "hash": "6c172ec354108e6a",
  "isRigid": true,
  "wallHash": "740cd9dd6b71a529",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 2" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.001959,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.197917,
    "spanZ": 0.197917,
    "vertexCount": 62,
  },
  "hash": "9962699ebadec973",
  "isRigid": true,
  "wallHash": "926eca3c62c59ba2",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 2" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.391711,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.197917,
    "spanZ": 0.197917,
    "vertexCount": 62,
  },
  "hash": "e9c049a16deb54c3",
  "isRigid": true,
  "wallHash": "2259d32afdd4fd26",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 4" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.091309,
    "indexCount": 240,
    "spanX": 5.1875,
    "spanY": 0.375,
    "spanZ": 5.1875,
    "vertexCount": 88,
  },
  "hash": "a5dbb338c3e63465",
  "isRigid": true,
  "wallHash": "52d45ac88aa6b413",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 4" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.091309,
    "indexCount": 240,
    "spanX": 5.1875,
    "spanY": 5.1875,
    "spanZ": 0.375,
    "vertexCount": 88,
  },
  "hash": "a6c9f139755ec24b",
  "isRigid": true,
  "wallHash": "b9aea67417d4b4e3",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 4" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 20.15625,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.375,
    "spanZ": 5.375,
    "vertexCount": 114,
  },
  "hash": "488b1ffc10fd69d4",
  "isRigid": true,
  "wallHash": "25d295272b15d6f5",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 4" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.007031,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.375,
    "spanZ": 0.375,
    "vertexCount": 62,
  },
  "hash": "1544da8ade87fd87",
  "isRigid": true,
  "wallHash": "3086057a6b13a98a",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > abs 4" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 1.40625,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.375,
    "spanZ": 0.375,
    "vertexCount": 62,
  },
  "hash": "171178b21166162f",
  "isRigid": true,
  "wallHash": "01b98284cb59c0ee",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 0.75" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 1.582092,
    "indexCount": 240,
    "spanX": 5.03125,
    "spanY": 0.0625,
    "spanZ": 5.03125,
    "vertexCount": 88,
  },
  "hash": "12987d5caa1b6001",
  "isRigid": true,
  "wallHash": "3df3484ea169404a",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 0.75" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 1.582092,
    "indexCount": 240,
    "spanX": 5.03125,
    "spanY": 5.03125,
    "spanZ": 0.0625,
    "vertexCount": 88,
  },
  "hash": "7e43f4a0a1923081",
  "isRigid": true,
  "wallHash": "88bc80858f1a968e",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 0.75" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 3.164063,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.0625,
    "spanZ": 5.0625,
    "vertexCount": 114,
  },
  "hash": "24625dc41dcbbdee",
  "isRigid": true,
  "wallHash": "335b69dd1efa3dcd",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 0.75" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.000195,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.0625,
    "spanZ": 0.0625,
    "vertexCount": 62,
  },
  "hash": "3e8b1b966b30ac4b",
  "isRigid": true,
  "wallHash": "b2adcfacfe54ae2c",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 0.75" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.039063,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.0625,
    "spanZ": 0.0625,
    "vertexCount": 62,
  },
  "hash": "58525d21c371db63",
  "isRigid": true,
  "wallHash": "fa7e9f884a5fd198",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 2" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 5.156956,
    "indexCount": 240,
    "spanX": 5.099167,
    "spanY": 0.198333,
    "spanZ": 5.099167,
    "vertexCount": 88,
  },
  "hash": "18d332699ef42f15",
  "isRigid": true,
  "wallHash": "613a255db76b0351",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 2" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 5.156956,
    "indexCount": 240,
    "spanX": 5.099167,
    "spanY": 5.099167,
    "spanZ": 0.198333,
    "vertexCount": 88,
  },
  "hash": "ac619cfd3ae3ec07",
  "isRigid": true,
  "wallHash": "470ad84c9e4329f5",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 2" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.310012,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.198333,
    "spanZ": 5.198334,
    "vertexCount": 114,
  },
  "hash": "025cce972017274c",
  "isRigid": true,
  "wallHash": "279d02b2e75cda15",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 2" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.001967,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.198333,
    "spanZ": 0.198333,
    "vertexCount": 62,
  },
  "hash": "cc9341bcdbba3767",
  "isRigid": true,
  "wallHash": "55c7690649d10dfa",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 2" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.39336,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.198333,
    "spanZ": 0.198333,
    "vertexCount": 62,
  },
  "hash": "268a0de9b9d62a9f",
  "isRigid": true,
  "wallHash": "882c9d058bfe591e",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 4" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.091309,
    "indexCount": 240,
    "spanX": 5.1875,
    "spanY": 0.375,
    "spanZ": 5.1875,
    "vertexCount": 88,
  },
  "hash": "1e5bea70bf9a1f51",
  "isRigid": true,
  "wallHash": "f1ebadb88f054093",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 4" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.091309,
    "indexCount": 240,
    "spanX": 5.1875,
    "spanY": 5.1875,
    "spanZ": 0.375,
    "vertexCount": 88,
  },
  "hash": "a21c6089f50502c7",
  "isRigid": true,
  "wallHash": "a9cd44cd2f541117",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 4" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 20.15625,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.375,
    "spanZ": 5.375,
    "vertexCount": 114,
  },
  "hash": "6f6e001496b4819e",
  "isRigid": true,
  "wallHash": "c18cc4901e84047f",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 4" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.007031,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.375,
    "spanZ": 0.375,
    "vertexCount": 62,
  },
  "hash": "1544da8ade87fd87",
  "isRigid": true,
  "wallHash": "3086057a6b13a98a",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cast_iron 4" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 1.40625,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.375,
    "spanZ": 0.375,
    "vertexCount": 62,
  },
  "hash": "171178b21166162f",
  "isRigid": true,
  "wallHash": "01b98284cb59c0ee",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 0.75" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 1.849606,
    "indexCount": 240,
    "spanX": 5.036458,
    "spanY": 0.072917,
    "spanZ": 5.036458,
    "vertexCount": 88,
  },
  "hash": "41dffcdcadad6f79",
  "isRigid": true,
  "wallHash": "18a0ba2c57ae552b",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 0.75" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 1.849606,
    "indexCount": 240,
    "spanX": 5.036458,
    "spanY": 5.036458,
    "spanZ": 0.072917,
    "vertexCount": 88,
  },
  "hash": "b051a6574f32632f",
  "isRigid": true,
  "wallHash": "2bb7e4b12c01fad7",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 0.75" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 3.699019,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.072917,
    "spanZ": 5.072917,
    "vertexCount": 114,
  },
  "hash": "6adf0cc4c15dc92e",
  "isRigid": true,
  "wallHash": "24d73eb16b6c64af",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 0.75" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.000266,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.072917,
    "spanZ": 0.072917,
    "vertexCount": 62,
  },
  "hash": "014950c8c7e50c0f",
  "isRigid": true,
  "wallHash": "a170f1ffaac6b6ae",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 0.75" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.053169,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.072917,
    "spanZ": 0.072917,
    "vertexCount": 62,
  },
  "hash": "477ab5fb7f21afbf",
  "isRigid": true,
  "wallHash": "7a7c6d38decee7d6",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 2" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 4.585256,
    "indexCount": 240,
    "spanX": 5.088542,
    "spanY": 0.177083,
    "spanZ": 5.088542,
    "vertexCount": 88,
  },
  "hash": "6f79d8885ff52589",
  "isRigid": true,
  "wallHash": "30a67fbc0dca393b",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 2" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 4.585256,
    "indexCount": 240,
    "spanX": 5.088542,
    "spanY": 5.088542,
    "spanZ": 0.177083,
    "vertexCount": 88,
  },
  "hash": "c2d700cecdec2bf3",
  "isRigid": true,
  "wallHash": "d1b07632533b769f",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 2" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 9.167734,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.177083,
    "spanZ": 5.177083,
    "vertexCount": 114,
  },
  "hash": "6aa7e779fc69577a",
  "isRigid": true,
  "wallHash": "360a4a65113aeefb",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 2" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.001568,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.177083,
    "spanZ": 0.177083,
    "vertexCount": 62,
  },
  "hash": "76620f226c39079b",
  "isRigid": true,
  "wallHash": "eb6ba0b6cf8b32ea",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 2" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.313584,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.177083,
    "spanZ": 0.177083,
    "vertexCount": 62,
  },
  "hash": "d1360cd7d7835633",
  "isRigid": true,
  "wallHash": "cf38591fadc7e51a",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 4" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 8.89814,
    "indexCount": 240,
    "spanX": 5.166667,
    "spanY": 0.333333,
    "spanZ": 5.166667,
    "vertexCount": 88,
  },
  "hash": "619730aeb25b5057",
  "isRigid": true,
  "wallHash": "2779ce17a7c67ebb",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 4" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 8.89814,
    "indexCount": 240,
    "spanX": 5.166667,
    "spanY": 5.166667,
    "spanZ": 0.333333,
    "vertexCount": 88,
  },
  "hash": "aa78279c39e2c0b5",
  "isRigid": true,
  "wallHash": "8a109c4227128e7f",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 4" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 17.777759,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.333333,
    "spanZ": 5.333333,
    "vertexCount": 114,
  },
  "hash": "91036faa29003e62",
  "isRigid": true,
  "wallHash": "d183b3e3397ee41b",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 4" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.005556,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.333333,
    "spanZ": 0.333333,
    "vertexCount": 62,
  },
  "hash": "9b49edd377f631c7",
  "isRigid": true,
  "wallHash": "01ff0f83cac73306",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > copper_type_l 4" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 1.111109,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.333333,
    "spanZ": 0.333333,
    "vertexCount": 62,
  },
  "hash": "01c0ccc4e306236b",
  "isRigid": true,
  "wallHash": "486fd12215f5a13e",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 0.75" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 2.225949,
    "indexCount": 240,
    "spanX": 5.04375,
    "spanY": 0.0875,
    "spanZ": 5.04375,
    "vertexCount": 88,
  },
  "hash": "5811d698958967e0",
  "isRigid": true,
  "wallHash": "5c3e9994fa3dbff3",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 0.75" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 2.225949,
    "indexCount": 240,
    "spanX": 5.04375,
    "spanY": 5.04375,
    "spanZ": 0.0875,
    "vertexCount": 88,
  },
  "hash": "67fdcfb7d437bac8",
  "isRigid": true,
  "wallHash": "0fc4916ed994c177",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 0.75" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 4.451563,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.0875,
    "spanZ": 5.0875,
    "vertexCount": 114,
  },
  "hash": "11ca40db86707542",
  "isRigid": true,
  "wallHash": "c87a3918562eb281",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 0.75" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.000383,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.0875,
    "spanZ": 0.0875,
    "vertexCount": 62,
  },
  "hash": "3967c3c00fe3afeb",
  "isRigid": true,
  "wallHash": "a13f6f6247971364",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 0.75" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.076562,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.0875,
    "spanZ": 0.0875,
    "vertexCount": 62,
  },
  "hash": "1be710dec9c6a6db",
  "isRigid": true,
  "wallHash": "fd745bb30277d498",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 2" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 5.145718,
    "indexCount": 240,
    "spanX": 5.098958,
    "spanY": 0.197917,
    "spanZ": 5.098958,
    "vertexCount": 88,
  },
  "hash": "3517c67ea46266b7",
  "isRigid": true,
  "wallHash": "97e5e8395e0d3bf1",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 2" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 5.145718,
    "indexCount": 240,
    "spanX": 5.098958,
    "spanY": 5.098958,
    "spanZ": 0.197917,
    "vertexCount": 88,
  },
  "hash": "75aec992af7c0837",
  "isRigid": true,
  "wallHash": "3caab9122bd32a21",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 2" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.287561,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.197917,
    "spanZ": 5.197917,
    "vertexCount": 114,
  },
  "hash": "9dbb9763fed9e18e",
  "isRigid": true,
  "wallHash": "0f4702e7d5034349",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 2" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.001959,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.197917,
    "spanZ": 0.197917,
    "vertexCount": 62,
  },
  "hash": "9962699ebadec973",
  "isRigid": true,
  "wallHash": "926eca3c62c59ba2",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 2" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.391711,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.197917,
    "spanZ": 0.197917,
    "vertexCount": 62,
  },
  "hash": "e9c049a16deb54c3",
  "isRigid": true,
  "wallHash": "2259d32afdd4fd26",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 4" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.091309,
    "indexCount": 240,
    "spanX": 5.1875,
    "spanY": 0.375,
    "spanZ": 5.1875,
    "vertexCount": 88,
  },
  "hash": "35cd57192a452cf8",
  "isRigid": true,
  "wallHash": "8421723ca2192578",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 4" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.091309,
    "indexCount": 240,
    "spanX": 5.1875,
    "spanY": 5.1875,
    "spanZ": 0.375,
    "vertexCount": 88,
  },
  "hash": "6c9afdd4ed1e66be",
  "isRigid": true,
  "wallHash": "ca6a8056e6b72a84",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 4" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 20.15625,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.375,
    "spanZ": 5.375,
    "vertexCount": 114,
  },
  "hash": "de5616fec1993724",
  "isRigid": true,
  "wallHash": "859234ea3b626719",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 4" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.007031,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.375,
    "spanZ": 0.375,
    "vertexCount": 62,
  },
  "hash": "1544da8ade87fd87",
  "isRigid": true,
  "wallHash": "3086057a6b13a98a",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > cpvc 4" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 1.40625,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.375,
    "spanZ": 0.375,
    "vertexCount": 62,
  },
  "hash": "171178b21166162f",
  "isRigid": true,
  "wallHash": "01b98284cb59c0ee",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 0.75" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 1.582092,
    "indexCount": 240,
    "spanX": 5.03125,
    "spanY": 0.0625,
    "spanZ": 5.03125,
    "vertexCount": 88,
  },
  "hash": "12987d5caa1b6001",
  "isRigid": true,
  "wallHash": "3df3484ea169404a",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 0.75" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 1.582092,
    "indexCount": 240,
    "spanX": 5.03125,
    "spanY": 5.03125,
    "spanZ": 0.0625,
    "vertexCount": 88,
  },
  "hash": "7e43f4a0a1923081",
  "isRigid": true,
  "wallHash": "88bc80858f1a968e",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 0.75" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 3.164063,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.0625,
    "spanZ": 5.0625,
    "vertexCount": 114,
  },
  "hash": "24625dc41dcbbdee",
  "isRigid": true,
  "wallHash": "335b69dd1efa3dcd",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 0.75" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.000195,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.0625,
    "spanZ": 0.0625,
    "vertexCount": 62,
  },
  "hash": "3e8b1b966b30ac4b",
  "isRigid": true,
  "wallHash": "b2adcfacfe54ae2c",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 0.75" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.039063,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.0625,
    "spanZ": 0.0625,
    "vertexCount": 62,
  },
  "hash": "58525d21c371db63",
  "isRigid": true,
  "wallHash": "fa7e9f884a5fd198",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 2" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 5.156956,
    "indexCount": 240,
    "spanX": 5.099167,
    "spanY": 0.198333,
    "spanZ": 5.099167,
    "vertexCount": 88,
  },
  "hash": "18d332699ef42f15",
  "isRigid": true,
  "wallHash": "613a255db76b0351",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 2" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 5.156956,
    "indexCount": 240,
    "spanX": 5.099167,
    "spanY": 5.099167,
    "spanZ": 0.198333,
    "vertexCount": 88,
  },
  "hash": "ac619cfd3ae3ec07",
  "isRigid": true,
  "wallHash": "470ad84c9e4329f5",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 2" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.310012,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.198333,
    "spanZ": 5.198334,
    "vertexCount": 114,
  },
  "hash": "025cce972017274c",
  "isRigid": true,
  "wallHash": "279d02b2e75cda15",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 2" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.001967,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.198333,
    "spanZ": 0.198333,
    "vertexCount": 62,
  },
  "hash": "cc9341bcdbba3767",
  "isRigid": true,
  "wallHash": "55c7690649d10dfa",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 2" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.39336,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.198333,
    "spanZ": 0.198333,
    "vertexCount": 62,
  },
  "hash": "268a0de9b9d62a9f",
  "isRigid": true,
  "wallHash": "882c9d058bfe591e",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 4" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.091309,
    "indexCount": 240,
    "spanX": 5.1875,
    "spanY": 0.375,
    "spanZ": 5.1875,
    "vertexCount": 88,
  },
  "hash": "1e5bea70bf9a1f51",
  "isRigid": true,
  "wallHash": "f1ebadb88f054093",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 4" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.091309,
    "indexCount": 240,
    "spanX": 5.1875,
    "spanY": 5.1875,
    "spanZ": 0.375,
    "vertexCount": 88,
  },
  "hash": "a21c6089f50502c7",
  "isRigid": true,
  "wallHash": "a9cd44cd2f541117",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 4" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 20.15625,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.375,
    "spanZ": 5.375,
    "vertexCount": 114,
  },
  "hash": "6f6e001496b4819e",
  "isRigid": true,
  "wallHash": "c18cc4901e84047f",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 4" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.007031,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.375,
    "spanZ": 0.375,
    "vertexCount": 62,
  },
  "hash": "1544da8ade87fd87",
  "isRigid": true,
  "wallHash": "3086057a6b13a98a",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > ductile_iron 4" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 1.40625,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.375,
    "spanZ": 0.375,
    "vertexCount": 62,
  },
  "hash": "171178b21166162f",
  "isRigid": true,
  "wallHash": "01b98284cb59c0ee",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 0.75" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 2.225949,
    "indexCount": 240,
    "spanX": 5.04375,
    "spanY": 0.0875,
    "spanZ": 5.04375,
    "vertexCount": 88,
  },
  "hash": "1b29c04e8e7ef788",
  "isRigid": true,
  "wallHash": "afa7250391494923",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 0.75" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 2.225949,
    "indexCount": 240,
    "spanX": 5.04375,
    "spanY": 5.04375,
    "spanZ": 0.0875,
    "vertexCount": 88,
  },
  "hash": "c683a9fc1d6d0718",
  "isRigid": true,
  "wallHash": "38a84e15c5746857",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 0.75" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 4.451563,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.0875,
    "spanZ": 5.0875,
    "vertexCount": 114,
  },
  "hash": "1b4f4f89ab1dca92",
  "isRigid": true,
  "wallHash": "e970533b04ecf209",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 0.75" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.000383,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.0875,
    "spanZ": 0.0875,
    "vertexCount": 62,
  },
  "hash": "3967c3c00fe3afeb",
  "isRigid": true,
  "wallHash": "a13f6f6247971364",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 0.75" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.076562,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.0875,
    "spanZ": 0.0875,
    "vertexCount": 62,
  },
  "hash": "1be710dec9c6a6db",
  "isRigid": true,
  "wallHash": "fd745bb30277d498",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 2" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 5.145718,
    "indexCount": 240,
    "spanX": 5.098958,
    "spanY": 0.197917,
    "spanZ": 5.098958,
    "vertexCount": 88,
  },
  "hash": "e9b5d71ad06983c3",
  "isRigid": true,
  "wallHash": "da397446bfb357e5",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 2" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 5.145718,
    "indexCount": 240,
    "spanX": 5.098958,
    "spanY": 5.098958,
    "spanZ": 0.197917,
    "vertexCount": 88,
  },
  "hash": "de2b15ad67ea1047",
  "isRigid": true,
  "wallHash": "0c546636e7c278f9",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 2" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.287561,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.197917,
    "spanZ": 5.197917,
    "vertexCount": 114,
  },
  "hash": "ae1f82f2a5d69a86",
  "isRigid": true,
  "wallHash": "1b0606ae5c9896dd",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 2" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.001959,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.197917,
    "spanZ": 0.197917,
    "vertexCount": 62,
  },
  "hash": "9962699ebadec973",
  "isRigid": true,
  "wallHash": "926eca3c62c59ba2",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 2" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.391711,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.197917,
    "spanZ": 0.197917,
    "vertexCount": 62,
  },
  "hash": "e9c049a16deb54c3",
  "isRigid": true,
  "wallHash": "2259d32afdd4fd26",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 4" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.091309,
    "indexCount": 240,
    "spanX": 5.1875,
    "spanY": 0.375,
    "spanZ": 5.1875,
    "vertexCount": 88,
  },
  "hash": "a4332ac450bb8e41",
  "isRigid": true,
  "wallHash": "34765c7f9d00ee63",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 4" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.091309,
    "indexCount": 240,
    "spanX": 5.1875,
    "spanY": 5.1875,
    "spanZ": 0.375,
    "vertexCount": 88,
  },
  "hash": "fff8d34a0ecad697",
  "isRigid": true,
  "wallHash": "bf1e89d11e6d24a3",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 4" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 20.15625,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.375,
    "spanZ": 5.375,
    "vertexCount": 114,
  },
  "hash": "5a822e52a355c672",
  "isRigid": true,
  "wallHash": "fddb826d18fb2823",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 4" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.007031,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.375,
    "spanZ": 0.375,
    "vertexCount": 62,
  },
  "hash": "1544da8ade87fd87",
  "isRigid": true,
  "wallHash": "3086057a6b13a98a",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > galvanized_steel 4" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 1.40625,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.375,
    "spanZ": 0.375,
    "vertexCount": 62,
  },
  "hash": "171178b21166162f",
  "isRigid": true,
  "wallHash": "01b98284cb59c0ee",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 0.75" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 2.225949,
    "indexCount": 240,
    "spanX": 5.04375,
    "spanY": 0.0875,
    "spanZ": 5.04375,
    "vertexCount": 88,
  },
  "hash": "74741dbb23ddf613",
  "isRigid": true,
  "wallHash": "3c97feb39578c83e",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 0.75" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 2.225949,
    "indexCount": 240,
    "spanX": 5.04375,
    "spanY": 5.04375,
    "spanZ": 0.0875,
    "vertexCount": 88,
  },
  "hash": "48ee36c97597b945",
  "isRigid": true,
  "wallHash": "71a5cdccfde38552",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 0.75" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 4.451563,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.0875,
    "spanZ": 5.0875,
    "vertexCount": 114,
  },
  "hash": "40883c77576ee276",
  "isRigid": true,
  "wallHash": "bb27de8b6450edbd",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 0.75" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.000383,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.0875,
    "spanZ": 0.0875,
    "vertexCount": 62,
  },
  "hash": "3967c3c00fe3afeb",
  "isRigid": true,
  "wallHash": "a13f6f6247971364",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 0.75" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.076562,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.0875,
    "spanZ": 0.0875,
    "vertexCount": 62,
  },
  "hash": "1be710dec9c6a6db",
  "isRigid": true,
  "wallHash": "fd745bb30277d498",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 2" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 5.145718,
    "indexCount": 240,
    "spanX": 5.098958,
    "spanY": 0.197917,
    "spanZ": 5.098958,
    "vertexCount": 88,
  },
  "hash": "c503a7c6c9bbb52d",
  "isRigid": true,
  "wallHash": "7a8de1af671543fb",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 2" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 5.145718,
    "indexCount": 240,
    "spanX": 5.098958,
    "spanY": 5.098958,
    "spanZ": 0.197917,
    "vertexCount": 88,
  },
  "hash": "15721d58c4ac2cd5",
  "isRigid": true,
  "wallHash": "46517ba0f33f0c2b",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 2" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.287561,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.197917,
    "spanZ": 5.197917,
    "vertexCount": 114,
  },
  "hash": "73e7b1374be7d554",
  "isRigid": true,
  "wallHash": "b58f083865bd6a7f",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 2" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.001959,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.197917,
    "spanZ": 0.197917,
    "vertexCount": 62,
  },
  "hash": "9962699ebadec973",
  "isRigid": true,
  "wallHash": "926eca3c62c59ba2",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 2" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.391711,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.197917,
    "spanZ": 0.197917,
    "vertexCount": 62,
  },
  "hash": "e9c049a16deb54c3",
  "isRigid": true,
  "wallHash": "2259d32afdd4fd26",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 4" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.091309,
    "indexCount": 240,
    "spanX": 5.1875,
    "spanY": 0.375,
    "spanZ": 5.1875,
    "vertexCount": 88,
  },
  "hash": "a5dbb338c3e63465",
  "isRigid": true,
  "wallHash": "52d45ac88aa6b413",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 4" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.091309,
    "indexCount": 240,
    "spanX": 5.1875,
    "spanY": 5.1875,
    "spanZ": 0.375,
    "vertexCount": 88,
  },
  "hash": "a6c9f139755ec24b",
  "isRigid": true,
  "wallHash": "b9aea67417d4b4e3",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 4" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 20.15625,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.375,
    "spanZ": 5.375,
    "vertexCount": 114,
  },
  "hash": "488b1ffc10fd69d4",
  "isRigid": true,
  "wallHash": "25d295272b15d6f5",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 4" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.007031,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.375,
    "spanZ": 0.375,
    "vertexCount": 62,
  },
  "hash": "1544da8ade87fd87",
  "isRigid": true,
  "wallHash": "3086057a6b13a98a",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch40 4" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 1.40625,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.375,
    "spanZ": 0.375,
    "vertexCount": 62,
  },
  "hash": "171178b21166162f",
  "isRigid": true,
  "wallHash": "01b98284cb59c0ee",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 0.75" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 2.225949,
    "indexCount": 240,
    "spanX": 5.04375,
    "spanY": 0.0875,
    "spanZ": 5.04375,
    "vertexCount": 88,
  },
  "hash": "74741dbb23ddf613",
  "isRigid": true,
  "wallHash": "3c97feb39578c83e",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 0.75" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 2.225949,
    "indexCount": 240,
    "spanX": 5.04375,
    "spanY": 5.04375,
    "spanZ": 0.0875,
    "vertexCount": 88,
  },
  "hash": "48ee36c97597b945",
  "isRigid": true,
  "wallHash": "71a5cdccfde38552",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 0.75" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 4.451563,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.0875,
    "spanZ": 5.0875,
    "vertexCount": 114,
  },
  "hash": "40883c77576ee276",
  "isRigid": true,
  "wallHash": "bb27de8b6450edbd",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 0.75" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.000383,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.0875,
    "spanZ": 0.0875,
    "vertexCount": 62,
  },
  "hash": "3967c3c00fe3afeb",
  "isRigid": true,
  "wallHash": "a13f6f6247971364",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 0.75" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.076562,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.0875,
    "spanZ": 0.0875,
    "vertexCount": 62,
  },
  "hash": "1be710dec9c6a6db",
  "isRigid": true,
  "wallHash": "fd745bb30277d498",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 2" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 5.145718,
    "indexCount": 240,
    "spanX": 5.098958,
    "spanY": 0.197917,
    "spanZ": 5.098958,
    "vertexCount": 88,
  },
  "hash": "c503a7c6c9bbb52d",
  "isRigid": true,
  "wallHash": "7a8de1af671543fb",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 2" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 5.145718,
    "indexCount": 240,
    "spanX": 5.098958,
    "spanY": 5.098958,
    "spanZ": 0.197917,
    "vertexCount": 88,
  },
  "hash": "15721d58c4ac2cd5",
  "isRigid": true,
  "wallHash": "46517ba0f33f0c2b",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 2" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.287561,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.197917,
    "spanZ": 5.197917,
    "vertexCount": 114,
  },
  "hash": "73e7b1374be7d554",
  "isRigid": true,
  "wallHash": "b58f083865bd6a7f",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 2" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.001959,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.197917,
    "spanZ": 0.197917,
    "vertexCount": 62,
  },
  "hash": "9962699ebadec973",
  "isRigid": true,
  "wallHash": "926eca3c62c59ba2",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 2" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.391711,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.197917,
    "spanZ": 0.197917,
    "vertexCount": 62,
  },
  "hash": "e9c049a16deb54c3",
  "isRigid": true,
  "wallHash": "2259d32afdd4fd26",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 4" bend-45 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.091309,
    "indexCount": 240,
    "spanX": 5.1875,
    "spanY": 0.375,
    "spanZ": 5.1875,
    "vertexCount": 88,
  },
  "hash": "a5dbb338c3e63465",
  "isRigid": true,
  "wallHash": "52d45ac88aa6b413",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 4" bend-90 — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 10.091309,
    "indexCount": 240,
    "spanX": 5.1875,
    "spanY": 5.1875,
    "spanZ": 0.375,
    "vertexCount": 88,
  },
  "hash": "a6c9f139755ec24b",
  "isRigid": true,
  "wallHash": "b9aea67417d4b4e3",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 4" multi-bend — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 20.15625,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.375,
    "spanZ": 5.375,
    "vertexCount": 114,
  },
  "hash": "488b1ffc10fd69d4",
  "isRigid": true,
  "wallHash": "25d295272b15d6f5",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 4" short-straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 0.007031,
    "indexCount": 168,
    "spanX": 0.05,
    "spanY": 0.375,
    "spanZ": 0.375,
    "vertexCount": 62,
  },
  "hash": "1544da8ade87fd87",
  "isRigid": true,
  "wallHash": "3086057a6b13a98a",
}
`;

exports[`buildPipeGeometry — rigid material snapshots > pvc_sch80 4" straight — no retraction 1`] = `
{
  "dim": {
    "aabbVolume": 1.40625,
    "indexCount": 168,
    "spanX": 10,
    "spanY": 0.375,
    "spanZ": 0.375,
    "vertexCount": 62,
  },
  "hash": "171178b21166162f",
  "isRigid": true,
  "wallHash": "01b98284cb59c0ee",
}
`;

exports[`buildPipeGeometry — rigid retraction flag matrix > pvc_sch40 2" bend-45 retractStartFt=0 retractEndFt=0 1`] = `
{
  "dim": {
    "aabbVolume": 5.145718,
    "indexCount": 240,
    "spanX": 5.098958,
    "spanY": 0.197917,
    "spanZ": 5.098958,
    "vertexCount": 88,
  },
  "hash": "c503a7c6c9bbb52d",
}
`;

exports[`buildPipeGeometry — rigid retraction flag matrix > pvc_sch40 2" bend-45 retractStartFt=0 retractEndFt=0.422 1`] = `
{
  "dim": {
    "aabbVolume": 4.719848,
    "indexCount": 192,
    "spanX": 5.098958,
    "spanY": 0.197917,
    "spanZ": 4.676958,
    "vertexCount": 70,
  },
  "hash": "0d4cb0c0fb0cf225",
}
`;

exports[`buildPipeGeometry — rigid retraction flag matrix > pvc_sch40 2" bend-45 retractStartFt=0.125 retractEndFt=0 1`] = `
{
  "dim": {
    "aabbVolume": 5.019572,
    "indexCount": 192,
    "spanX": 4.973958,
    "spanY": 0.197917,
    "spanZ": 5.098958,
    "vertexCount": 70,
  },
  "hash": "836659692f7dc64f",
}
`;

exports[`buildPipeGeometry — rigid retraction flag matrix > pvc_sch40 2" bend-45 retractStartFt=0.422 retractEndFt=0.422 1`] = `
{
  "dim": {
    "aabbVolume": 4.329225,
    "indexCount": 144,
    "spanX": 4.676959,
    "spanY": 0.197917,
    "spanZ": 4.676958,
    "vertexCount": 52,
  },
  "hash": "2be2ecdd7459a05e",
}
`;

exports[`buildPipeGeometry — rigid retraction flag matrix > pvc_sch40 2" bend-90 retractStartFt=0 retractEndFt=0 1`] = `
{
  "dim": {
    "aabbVolume": 5.145718,
    "indexCount": 240,
    "spanX": 5.098958,
    "spanY": 5.098958,
    "spanZ": 0.197917,
    "vertexCount": 88,
  },
  "hash": "15721d58c4ac2cd5",
}
`;

exports[`buildPipeGeometry — rigid retraction flag matrix > pvc_sch40 2" bend-90 retractStartFt=0 retractEndFt=0.422 1`] = `
{
  "dim": {
    "aabbVolume": 4.719848,
    "indexCount": 192,
    "spanX": 5.098958,
    "spanY": 4.676958,
    "spanZ": 0.197917,
    "vertexCount": 70,
  },
  "hash": "dd060e5d847622a1",
}
`;

exports[`buildPipeGeometry — rigid retraction flag matrix > pvc_sch40 2" bend-90 retractStartFt=0.125 retractEndFt=0 1`] = `
{
  "dim": {
    "aabbVolume": 5.019572,
    "indexCount": 192,
    "spanX": 4.973958,
    "spanY": 5.098958,
    "spanZ": 0.197917,
    "vertexCount": 70,
  },
  "hash": "b0e7425a13b98cbb",
}
`;

exports[`buildPipeGeometry — rigid retraction flag matrix > pvc_sch40 2" bend-90 retractStartFt=0.422 retractEndFt=0.422 1`] = `
{
  "dim": {
    "aabbVolume": 4.329225,
    "indexCount": 144,
    "spanX": 4.676959,
    "spanY": 4.676958,
    "spanZ": 0.197917,
    "vertexCount": 52,
  },
  "hash": "288505cecf36ec02",
}
`;

exports[`buildPipeGeometry — rigid retraction flag matrix > pvc_sch40 2" multi-bend retractStartFt=0 retractEndFt=0 1`] = `
{
  "dim": {
    "aabbVolume": 10.287561,
    "indexCount": 312,
    "spanX": 10,
    "spanY": 0.197917,
    "spanZ": 5.197917,
    "vertexCount": 114,
  },
  "hash": "73e7b1374be7d554",
}
`;

exports[`buildPipeGeometry — rigid retraction flag matrix > pvc_sch40 2" multi-bend retractStartFt=0 retractEndFt=0.422 1`] = `
{
  "dim": {
    "aabbVolume": 9.853426,
    "indexCount": 264,
    "spanX": 9.578,
    "spanY": 0.197917,
    "spanZ": 5.197917,
    "vertexCount": 96,
  },
  "hash": "3dfa054b5453e82d",
}
`;

exports[`buildPipeGeometry — rigid retraction flag matrix > pvc_sch40 2" multi-bend retractStartFt=0.125 retractEndFt=0 1`] = `
{
  "dim": {
    "aabbVolume": 10.158967,
    "indexCount": 264,
    "spanX": 9.875,
    "spanY": 0.197917,
    "spanZ": 5.197917,
    "vertexCount": 96,
  },
  "hash": "3291af61a800ce7e",
}
`;

exports[`buildPipeGeometry — rigid retraction flag matrix > pvc_sch40 2" multi-bend retractStartFt=0.422 retractEndFt=0.422 1`] = `
{
  "dim": {
    "aabbVolume": 9.419291,
    "indexCount": 216,
    "spanX": 9.156,
    "spanY": 0.197917,
    "spanZ": 5.197917,
    "vertexCount": 78,
  },
  "hash": "e952ec876b2a6f23",
}
`;
